# datum

./: .gitignore  LICENSE  package-lock.json  package.json
.github/workflows/: release.yml
assets/brand/: datum-logo-animated.html
docs/: index.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  connection.rs  files.rs  keychain.rs  mod.rs  query.rs
src-tauri/src/drivers/: mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs  traits.rs
src-tauri/src/models/: connection.rs  mod.rs
src-tauri/src/services/: connection_service.rs  mod.rs  query_service.rs  schema_service.rs
src/commands/: index.ts
src/components/browser/: DataBrowser.tsx
src/components/editor/: SqlEditor.tsx
src/components/erd/: ErdDiagram.tsx  TableErdModal.tsx
src/components/results/: ResultsTable.tsx
src/components/shared/: ConnectionModal.tsx  SearchModal.tsx  SplashScreen.tsx  TermsModal.tsx  UpdateNotifier.tsx
src/components/sidebar/: Sidebar.tsx
src/types/: index.ts
